# accord-rs

./: Cargo.toml  README.md  pyproject.toml
.github/workflows/: CI.yml
assets/: .gitignore  K03455.fasta  PRRT-1278_INT-915.fasta  README.md
python/accord/: __init__.py  __init__.pyi
python/accord/data/: __init__.pyi  indel.pyi  stats.pyi
src/: accord.rs  lib.rs
src/accord/: app.rs  calculator.rs  cli.rs  data.rs  utils.rs
src/accord/data/: consensus.rs  indel.rs  seq.rs  settings.rs  stats.rs
